# vut-ifj-proj

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  a  assignment.c  assignment.h  binary_search_tree.h  binary_tree_TESTS.c  btree  buffer.h  built_in_functions.c  charBuffer.h  char_buffer.c  char_buffer.h  chr  code  dynamic_char_array.c  dynamic_char_array.h  dynamic_int_array.c  dynamic_int_array.h  dynamic_string_array.c  dynamic_string_array.h  generator.c  generator.h  intBuffer.h  int_buffer.c  int_buffer.h  linked_list.c  linked_list.h  main.c  misc.c  misc.h  my_test  my_test.save  ord  parser.c  parser.h  precedence_analysis.c  (+22 more)
doc/doc/: main.tex
inputs/: 14_code_7  15_code_8  a  x  y
misc/: cfg  cfg_bare  ll_table.csv  ll_table.ods  precedence_table.csv  precedence_table.ods  precedence_table_clean.csv  precedence_table_final.csv
misc/built_in_functions-ifjcode21/: chr  ord  readi  readn  reads  substr  tointeger
tests/: Makefile  test  test.sh  tests.c  x
tests/precedence_analysis_tests/: generate_reference.sh  precedence_analysis_tests.c  print_all_tests.sh
tests/precedence_analysis_tests/a/: 03_str_literal  05_scientific_literal  13_mixed_integer_division  (+24 more)
tests/scanner/: scanner_tests.c  tst
tests/symtable/: symtable_tests.c
tests/symtable_stack/: symtable_stack_tests.c
tests/symtable_stack_tests/: symtable_stack_tests.c
tests/symtable_tests/: symtable_tests.c
tests/symtable_tree/: symtable_tree_tests.c
tests/symtable_tree_tests/: symtable_tree_tests.c
tests/token/: token_tests.c
tests/token_tests/: token_tests.c
(+235 files in other folders)
